Regression: Vertices and faces extruded with Solidify no longer snap. #120104

Closed
opened 2024-03-31 04:04:23 +02:00 by hoya choe · 9 comments

System Information
Operating system: Windows 11 , MacBook pro 13
Graphics card: 4090RTX , Mac M2

Blender Version
4.1

Short description of error
Vertices and faces extruded with Solidify no longer snap.
Faces that are extruded from the Solidify of the object to be snapped will be snapped, but faces and vertices that will be extruded from the Solidify of the object to be snapped will not be snapped.

video
https://drive.google.com/file/d/1kAdkkXhlqAxJJuNDToQ0umxrApHR2W-w/view?usp=drive_link

Untitled

Exact steps for others to reproduce the error

  1. Press A key Delete All Obj.
  2. Shift+A , Add Plane.
  3. Add Solidify modifier Set more Thickness , like 0.6m.
  4. Shift +D Duplicate Obj on top.
  5. Set Snap to Face and On Snap.
  6. G key move and snap. and you can't not snap the extruded with Solidify.

Faces that are extruded from the Solidify of the object to be snapped will be snapped, but faces and vertices that will be extruded from the Solidify of the object to be snapped will not be snapped.

**System Information** Operating system: Windows 11 , MacBook pro 13 Graphics card: 4090RTX , Mac M2 **Blender Version** 4.1 **Short description of error** Vertices and faces extruded with Solidify no longer snap. Faces that are extruded from the Solidify of the object to be snapped will be snapped, but faces and vertices that will be extruded from the Solidify of the object to be snapped will not be snapped. video https://drive.google.com/file/d/1kAdkkXhlqAxJJuNDToQ0umxrApHR2W-w/view?usp=drive_link ![Untitled](/attachments/e664527a-6504-416c-8271-34283bcc79e1) **Exact steps for others to reproduce the error** 1. Press A key Delete All Obj. 2. Shift+A , Add Plane. 3. Add Solidify modifier Set more Thickness , like 0.6m. 4. Shift +D Duplicate Obj on top. 6. Set Snap to Face and On Snap. 7. G key move and snap. and you can't not snap the extruded with Solidify. Faces that are extruded from the Solidify of the object to be snapped will be snapped, but faces and vertices that will be extruded from the Solidify of the object to be snapped will not be snapped.
hoya choe added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-03-31 04:04:24 +02:00
Iliya Katushenock added the
Interest
Modeling
Interest
Modifiers
labels 2024-03-31 14:34:21 +02:00
Iliya Katushenock changed title from Vertices and faces extruded with Solidify no longer snap. to Regression: Vertices and faces extruded with Solidify no longer snap. 2024-03-31 14:34:36 +02:00
Member

Not sure if you meant that in 4.1+ snap will not pick the closest point from extruded geometries, which indeed seem to be the case, but now you can also use B key to select snap base so you can choose whatever point you want on the source object as the snap target point.

@mano-wii is this a bug?

Not sure if you meant that in 4.1+ snap will not pick the closest point from extruded geometries, which indeed seem to be the case, but now you can also use `B` key to select snap base so you can choose whatever point you want on the source object as the snap target point. @mano-wii is this a bug?
YimingWu added
Module
Modeling
Status
Needs Info from Developers
and removed
Status
Needs Triage
labels 2024-04-01 07:41:15 +02:00
Author

video 2
https://drive.google.com/file/d/1eHq45j9UnD5_JWlHlniRL-k4r-SbKRqA/view?usp=drive_link

Snap does not work on geometry with Solidify as well as other modifiers.
Snap does not work when using Generate and Deform modifiers as well as Solidify

sorry im using Google Translator

video 2 https://drive.google.com/file/d/1eHq45j9UnD5_JWlHlniRL-k4r-SbKRqA/view?usp=drive_link Snap does not work on geometry with Solidify as well as other modifiers. Snap does not work when using Generate and Deform modifiers as well as Solidify sorry im using Google Translator
Member

Humm yeah now I do believe this is a bug since I don't believe this behaviour should change even when select base feature is available here

Humm yeah now I do believe this is a bug since I don't believe this behaviour should change even when select base feature is available here
YimingWu added
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Info from Developers
labels 2024-04-01 08:28:38 +02:00
Author

wow G and B key is work . thanks~~
But before, i could just snap object with modifier directly . Will this be changed to pressing the B key in a future version?

wow G and B key is work . thanks~~ But before, i could just snap object with modifier directly . Will this be changed to pressing the B key in a future version?
Member

Will this be changed to pressing the B key in a future version?

I don't think this is the intention since it's gonna be a lot more inconvenient especially when modifiers could change the geometry a lot

> Will this be changed to pressing the B key in a future version? I don't think this is the intention since it's gonna be a lot more inconvenient especially when modifiers could change the geometry a lot
Member

Broke between f20e38d42216 - fd212e3f6ca8

Broke between `f20e38d42216 - fd212e3f6ca8`
Member

Bisecting points to 1cbd0f5a85 as the culprit commit. CC @HooglyBoogly

Bisecting points to 1cbd0f5a8583a898ebba45723847d1e5fb3d03a1 as the culprit commit. CC @HooglyBoogly

One solution is to get the bounds of the evaluated object.
This wasn't necessary before, but it seems more expected.

diff --git a/source/blender/editors/transform/transform_snap.cc b/source/blender/editors/transform/transform_snap.cc
index 90bf9299fa2..ef7b74b845f 100644
--- a/source/blender/editors/transform/transform_snap.cc
+++ b/source/blender/editors/transform/transform_snap.cc
@@ -40,6 +40,8 @@
 
 #include "SEQ_sequencer.hh"
 
+#include "DEG_depsgraph_query.hh"
+
 #include "MEM_guardedalloc.h"
 
 #include "transform.hh"
@@ -1422,7 +1424,7 @@ static void snap_source_closest_fn(TransInfo *t)
           std::optional<blender::Bounds<blender::float3>> bounds;
 
           if ((t->options & CTX_OBMODE_XFORM_OBDATA) == 0) {
-            bounds = BKE_object_boundbox_get(td->ob);
+            bounds = BKE_object_boundbox_get(DEG_get_evaluated_object(t->depsgraph, td->ob));
           }
 
           /* Use bound-box if possible. */

I'll leave it to @HooglyBoogly

One solution is to get the bounds of the evaluated object. This wasn't necessary before, but it seems more expected. ```diff diff --git a/source/blender/editors/transform/transform_snap.cc b/source/blender/editors/transform/transform_snap.cc index 90bf9299fa2..ef7b74b845f 100644 --- a/source/blender/editors/transform/transform_snap.cc +++ b/source/blender/editors/transform/transform_snap.cc @@ -40,6 +40,8 @@ #include "SEQ_sequencer.hh" +#include "DEG_depsgraph_query.hh" + #include "MEM_guardedalloc.h" #include "transform.hh" @@ -1422,7 +1424,7 @@ static void snap_source_closest_fn(TransInfo *t) std::optional<blender::Bounds<blender::float3>> bounds; if ((t->options & CTX_OBMODE_XFORM_OBDATA) == 0) { - bounds = BKE_object_boundbox_get(td->ob); + bounds = BKE_object_boundbox_get(DEG_get_evaluated_object(t->depsgraph, td->ob)); } /* Use bound-box if possible. */ ``` I'll leave it to @HooglyBoogly
Member

Thanks for the investigation @mano-wii

Thanks for the investigation @mano-wii
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-01 17:02:10 +02:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2024-04-01 17:10:15 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120104
No description provided.