Fix #120104: Snap ignores evaluated geometry bounds

Previously the bounds were accessed on the original object.
That used to implicitly get the evaluated geometry's bounds,
but now that is an explicit choice.